fixed alignment of project-section, adjusted title over image, adjusted other alignments of text

--- a/Code/style.css
+++ b/Code/style.css
@@ -153,6 +153,8 @@ header {
 
 .tech-text {
     font-size: 18px;
+    width: 80%;
+    margin-bottom: 10px;
 
 }
 /***FEATURED PROJECTS SECTION***/
@@ -173,35 +175,68 @@ header {
     font-size: 22px;
     text-align: center;
     color: #fff;
-    background-color: #821752;
+    background-color: #821752;    
+}
+
+.project-wrapper {
+    width: 50%;
+    padding 10px;
 }
 
 .project-card {
-    width: 375px;
-    height:400px;
+    
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 0;
+    position: relative;
+}
+
+.project-card h2 {
+    position: absolute;
+    z-index: 2;
+    top: 60px;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.short-summary-text {
+    width: 80%;
+    padding: 0 20px;
 }
 
 .tag-word-container {
+    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    padding: 0;
+    
 }
 
 .important-tag-word {
     width: 60px;
+    margin-right: 15px;
+    background-color: #fdbbb5;
 }
 /***OTHER PROJECTS SECTION***/
+.other-projects-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+
 
 /***MY THOUGHTS SECTION***/
 .my-thoughts-section {
     background-color: #fdbbb5;
     padding: 25px;
+ }
+
+ .article-container h1 {
+     background-color: #fee2b3;
  }
 
 
